onlinejudge/outputs/4d43723c-4a43-4871-b591-8b4446ffcd82.txt
  File "/Users/gauravnayak/Desktop/AlgouniversityDevSeason/Project/AlgoDevSeason/onlinejudge/codes/4d43723c-4a43-4871-b591-8b4446ffcd82.python", line 2
    using namespace std;
          ^^^^^^^^^
SyntaxError: invalid syntax
